# SQBot

./: .gitignore  CMakeLists.txt  README.md  example.cpp
.github/workflow/: ci.yml
.github/workflows/: ci.yml  suppressions.txt
examples/: echo_bot.cpp
include/SQBot/API/: animation.h  audio.h  callback_game.h  callback_query.h  chat.h  chat_invite_link.h  chat_location.h  chat_member.h  chat_member_updated.h  chat_permissions.h  chat_photo.h  chosen_inline_result.h  contact.h  dice.h  document.h  encrypted_credentials.h  encrypted_passport_element.h  file.h  force_reply.h  game.h  inline_keyboard_button.h  inline_keyboard_markup.h  inline_query.h  invoice.h  keyboard_button.h  keyboard_button_poll_type.h  location.h  login_url.h  mask_position.h  message.h  message_auto_delete_timer_changed.h  message_entity.h  message_id.h  order_info.h  passport_data.h  passport_file.h  photo_size.h  poll.h  poll_answer.h  poll_option.h  (+19 more)
include/SQBot/API/Animation/: animation.cpp  animation.h
include/SQBot/API/Audio/: audio.cpp  audio.h
include/SQBot/API/CallbackGame/: callback_game.cpp  callback_game.h
include/SQBot/API/CallbackQuery/: callback_query.cpp  callback_query.h
include/SQBot/API/Chat/: chat.cpp  chat.h
include/SQBot/API/ChatInviteLink/: chat_invite_link.cpp  chat_invite_link.h
include/SQBot/API/ChatLocation/: chat_location.cpp  chat_location.h
include/SQBot/API/ChatMember/: chat_member.cpp  chat_member.h
include/SQBot/API/ChatMemberUpdated/: chat_member_updated.cpp  chat_member_updated.h
include/SQBot/API/ChatPermissions/: chat_permissions.cpp  chat_permissions.h
include/SQBot/API/ChatPhoto/: chat_photo.cpp  chat_photo.h
include/SQBot/API/ChosenInlineResult/: chosen_inline_result.cpp  chosen_inline_result.h
include/SQBot/API/Contact/: contact.cpp  contact.h
include/SQBot/API/Dice/: dice.cpp  dice.h
include/SQBot/API/Document/: document.cpp  document.h
include/SQBot/API/EncryptedCredentials/: encrypted_credentials.cpp  encrypted_credentials.h
include/SQBot/API/EncryptedPassportElement/: encrypted_passport_element.cpp  encrypted_passport_element.h
include/SQBot/API/File/: file.cpp  file.h
include/SQBot/API/ForceReply/: force_reply.cpp  force_reply.h
include/SQBot/API/Game/: game.cpp  game.h
include/SQBot/API/InlineKeyboardButton/: inline_keyboard_button.cpp  inline_keyboard_button.h
include/SQBot/API/InlineKeyboardMarkup/: inline_keyboard_markup.cpp  inline_keyboard_markup.h
include/SQBot/API/InlineQuery/: inline_query.cpp  inline_query.h
include/SQBot/API/Invoice/: invoice.cpp  invoice.h
include/SQBot/API/KeyboardButton/: keyboard_button.cpp  keyboard_button.h
include/SQBot/API/KeyboardButtonPollType/: keyboard_button_poll_type.cpp  keyboard_button_poll_type.h
include/SQBot/API/Location/: location.cpp  location.h
include/SQBot/API/LoginUrl/: login_url.cpp  login_url.h
include/SQBot/API/MaskPosition/: mask_position.cpp  mask_position.h
include/SQBot/API/Message/: message.cpp  message.h
include/SQBot/API/MessageAutoDeleteTimerChanged/: message_auto_delete_timer_changed.cpp  message_auto_delete_timer_changed.h
include/SQBot/API/MessageEntity/: message_entity.cpp  message_entity.h
include/SQBot/API/MessageId/: message_id.cpp  message_id.h
include/SQBot/API/OrderInfo/: order_info.cpp  order_info.h
include/SQBot/API/PassportData/: passport_data.cpp  passport_data.h
include/SQBot/API/PassportFile/: passport_file.cpp  passport_file.h
include/SQBot/API/PhotoSize/: photo_size.cpp  photo_size.h
include/SQBot/API/Poll/: poll.cpp  poll.h
include/SQBot/API/PollAnswer/: poll_answer.cpp  poll_answer.h
include/SQBot/API/PollOption/: poll_option.cpp  poll_option.h
include/SQBot/API/PreCheckoutQuery/: pre_checkout_query.cpp  pre_checkout_query.h
include/SQBot/API/ProximityAlertTriggered/: proximity_alert_triggered.cpp  proximity_alert_triggered.h
include/SQBot/API/ReplyKeyboardMarkup/: reply_keyboard_markup.cpp  reply_keyboard_markup.h
include/SQBot/API/ReplyKeyboardRemove/: reply_keyboard_remove.cpp  reply_keyboard_remove.h
include/SQBot/API/ShippingAddress/: shipping_address.cpp  shipping_address.h
include/SQBot/API/ShippingQuery/: shipping_query.cpp  shipping_query.h
include/SQBot/API/Sticker/: sticker.cpp  sticker.h
include/SQBot/API/SuccessfulPayment/: successful_payment.cpp  successful_payment.h
include/SQBot/API/Update/: update.cpp  update.h
include/SQBot/API/User/: user.cpp  user.h
include/SQBot/API/UserProfilePhotos/: user_profile_photos.cpp  user_profile_photos.h
include/SQBot/API/Venue/: venue.cpp  venue.h
include/SQBot/API/Video/: video.cpp  video.h
include/SQBot/API/VideoNote/: video_note.cpp  video_note.h
include/SQBot/API/Voice/: voice.cpp  voice.h
include/SQBot/AbstractReplyMarkup/: abstract_reply_markup.h
include/SQBot/Bot/: bot.cpp  bot.h
include/SQBot/EventManager/: event_manager.cpp  event_manager.h
include/SQBot/Exception/: exception.cpp  exception.h
include/SQBot/InputFile/: input_file.cpp  input_file.h
include/SQBot/Message/: message.h
include/SQBot/User/: user.cpp  user.h
include/SQBot/Utils/: utils.cpp  utils.h
include/nlohmann/: json.h
src/API/: animation.cpp  audio.cpp  callback_game.cpp  callback_query.cpp  chat.cpp  chat_invite_link.cpp  chat_location.cpp  chat_member.cpp  chat_member_updated.cpp  chat_permissions.cpp  chat_photo.cpp  chosen_inline_result.cpp  contact.cpp  dice.cpp  document.cpp  encrypted_credentials.cpp  encrypted_passport_element.cpp  file.cpp  force_reply.cpp  game.cpp  inline_keyboard_button.cpp  inline_keyboard_markup.cpp  inline_query.cpp  invoice.cpp  keyboard_button.cpp  keyboard_button_poll_type.cpp  location.cpp  login_url.cpp  mask_position.cpp  message.cpp  message_auto_delete_timer_changed.cpp  message_entity.cpp  message_id.cpp  order_info.cpp  passport_data.cpp  passport_file.cpp  photo_size.cpp  poll.cpp  poll_answer.cpp  poll_option.cpp  (+19 more)
src/Bot/: bot.cpp
src/EventManager/: event_manager.cpp
src/Exception/: exception.cpp
src/InputFile/: input_file.cpp
src/Utils/: utils.cpp
(+9 files in other folders)
